# manifold

./: Cargo.toml  README.md
src/: circle.rs  circle_2d.rs  circle_3d.rs  color.rs  lib.rs  line2.rs  line_2d.rs  mat.rs  plane.rs  point.rs  point2.rs  point3.rs  point_2d.rs  point_3d.rs  polynomial.rs  quad.rs  quat.rs  quaternion.rs  rect.rs  rect2.rs  rect_2d.rs  size.rs  size2.rs  size_2d.rs  sphere.rs  triangle.rs  vec.rs  vec2.rs  vec3.rs  vector2.rs  vector3.rs  vector4.rs  vector_2d.rs  vector_3d.rs  vertex.rs
