[package]
name = "manifold"
version = "0.1.0"
description = "Robust geometry and vector graphics primitives"
edition = "2021"
license = "MIT"
authors = ["Faisal Arshed <faisalarshed28@gmail.com>"]
homepage = "https://github.com/farshed/manifold"
repository = "https://github.com/farshed/manifold"
readme = "README.md"
keywords = ["geometry", "graphics", "rendering", "3", "bezier"]
categories = ["graphics", "mathematics"]

[dependencies]
